# legitSecurityTask

./: .dockerignore  .gitignore  Dockerfile  README.md  deleteme.json  package-lock.json  package.json  pyproject.toml  run.sh  test.sh
src/: main.py  models.py  run.sh  test.sh  webhook_types.py
src/eventHandlers/: event_handler.py  push_event_handler.py  repository_event_handler.py  team_event_handler.py
src/tests/: test_warning_logs.py
src/tests/utils/: create_repo.json  create_team.json  delete_repo.json
src/webhookParser/: webhook_parsers.py
