[tool.poetry]
name = "legitsecuritytask"
version = "0.1.0"
description = ""
authors = ["Yotam Ran <yotam.ran@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.5"
uvicorn = "^0.32.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
